Bug 48274 - EDITING: Fill disabled if hidden (or filtered) cells in range instead of filling omitting invisible cells
Summary: EDITING: Fill disabled if hidden (or filtered) cells in range instead of fill...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: BSA target:26.8.0 target:26.2.4
Keywords:
: 152665 157077 (view as bug list)
Depends on:
Blocks: Calc-Cells
  Show dependency treegraph
 
Reported: 2012-04-03 22:31 UTC by Vlad
Modified: 2026-04-14 15:32 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of calc app showing selection and menu with greyed out fill down option (113.36 KB, image/png)
2026-01-29 00:36 UTC, Craig Lambie
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vlad 2012-04-03 22:31:54 UTC
Problem description: 
Fill down (Ctrl-D) does not work if selected visible and hidden cells.

Steps to reproduce:
1. cells A1=Header, A2=1, A3=empty, A4=1, A5=1
2. enable filter by Header=not empty
3. change value A2 to "2"
4. select A2:A5
5. click Ctrl-D and nothing happen

Current behavior:
Fill down (Ctrl-D) does not work if selected visible and hidden cells.

Expected behavior:
Fill down (Ctrl-D) must fill down all visible selected cells and skip all hidden (even selected) cells.

Platform (if different from the browser): 
Ubuntu 11.10

Browser: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:11.0) Gecko/20100101 Firefox/11.0
Comment 1 Rainer Bielefeld Retired 2012-04-09 00:03:56 UTC
Menu also is greyed out, so shortcut can't work, expected behavior for now.

But reporter's expected behavior is correct, and I am pretty sure that this already has been reported somewhere among all those "hidden cells handling" Bugs. 

@Vlad:
Can you please help to check whether this problem has already been reported?
Comment 2 Rainer Bielefeld Retired 2013-04-14 06:50:23 UTC
Still [Reproducible] with parallel Dev-installation of  "Version 4.1.0.0.alpha0+ (Build ID: 049ce78144650d92eb6bd73292868f73d37c901) TinderBox: Win-x86@6, Branch:master, Pull Time: 2013-03-29_23:59:42" ENGLISH UI / German Locale on German WIN7 Home Premium (64bit) with LODev/4 Masters User Profile 

Already [Reproducible] with Server Installation of "LibreOffice 3.3.3  English UI/ German Locale [OOO330m19 (Build:301) tag libreoffice-3.3.3.1] on German WIN7 Home Premium (64bit) 

I can't find a DUP, so NEW.

Additional info:
Same with AOOo 3.4.0, so probably inherited from OOo
Same with Symphony and still with AOOo 4 Master
Softmaker FreeOffice: Fill is active, but overwrites hidden cells, even worse!
(Old) Gnumeric: Copa/past overwrites hidden cells, I did not find a "Fill" function

@Spreadsheet Team
Please change  Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf (and remove others in team from CC).
Comment 3 Eike Rathke (retired, only occasionally showing up) 2013-04-15 17:39:52 UTC
Probably a fall-out of http://wiki.openoffice.org/wiki/Calc/Drafts/Issue_33851 behavior when filtered rows are selected, maybe the change for bug 35345 (2c2ea10d446b32d24f6268116093969b454f47b8) is also related, see also https://issues.apache.org/ooo/show_bug.cgi?id=89232

Note that filtered is different from hidden, on purpose, and material in the wiki and bug comments confuse these a lot. Please stick to the term filtered in this case, thanks.

Taking.
Comment 4 Eike Rathke (retired, only occasionally showing up) 2015-12-16 16:24:16 UTC
Oops, noticing that this is still assigned to me but I never got around to work on it. Releasing for those who want to tackle it.
Comment 5 QA Administrators 2017-01-03 19:48:12 UTC Comment hidden (noise)
Comment 6 pavelz 2017-04-18 11:18:46 UTC
Still present in 5.2.6.2 and 5.3.2.2 on Fedora 25.

Copying to selected visible cells works as expected, but it warns about overwriting cells which are not empty, even if there are only empty selected visible cells.
Comment 7 QA Administrators 2018-06-18 02:42:57 UTC Comment hidden (noise)
Comment 8 elmonster18 2019-03-02 17:52:39 UTC
There are definitely still some bugs here.
1. Following the reproduction steps, an autofilter with Header=not empty does not do anything.
2. if I put A3 = 0  (instead of empty as in step 1) and then filter so that it only shows 1, the filter works and following steps 3, 4, 5 reproduces the same behavior as in the original bug report

Version: 6.2.0.3
Build ID: 6.2.0-3
CPU threads: 8; OS: Linux 4.20; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 9 QA Administrators 2021-03-02 03:48:15 UTC Comment hidden (noise)
Comment 10 pavelz 2021-04-29 20:47:48 UTC
Still present.

Version: 7.1.2.2 / LibreOffice Community
Build ID: 8a45595d069ef5570103caea1b71cc9d82b2aae4
CPU threads: 4; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: cs-CZ
Flatpak
Calc: threaded
Comment 11 QA Administrators 2023-04-30 03:22:43 UTC Comment hidden (noise, obsolete)
Comment 12 stragu 2023-10-06 08:29:19 UTC
*** Bug 157077 has been marked as a duplicate of this bug. ***
Comment 13 stragu 2023-10-06 08:31:23 UTC
*** Bug 152665 has been marked as a duplicate of this bug. ***
Comment 14 QA Administrators 2025-10-06 03:11:49 UTC Comment hidden (noise)
Comment 15 Craig Lambie 2026-01-29 00:36:38 UTC
Created attachment 205245 [details]
screenshot of calc app showing selection and menu with greyed out fill down option

Hey team,

Unfortunately this bug is still present.
I was using a slightly older version of libre office, and found the bug, then found this post about it.
I then updated Libre office to the latest version, reopened the file in that, and tried to do the fill down again.
No luck.

Version: 25.8.4.2 (X86_64) / LibreOffice Community
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 16; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Flatpak
Calc: threaded
Comment 16 Commit Notification 2026-04-10 07:49:22 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1a9ed757489725d106c28c902c24fc827806c902

tdf#48274 - Enable fill operations including filtered rows

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 gmolleda 2026-04-10 17:15:27 UTC
There seem to be two different cases involved here:

1) When rows are hidden by filter:
   - Pasting into a filtered range may fail with "Cannot insert into multiple selection".
   - However, if only visible cells are explicitly selected before pasting, the operation works correctly and only affects visible rows.

2) When rows are hidden manually:
   - Pasting still affects hidden rows, which is inconsistent with the filtered case.

This suggests that Calc already supports correct behavior (visible-only paste), but only when the target range is explicitly defined as visible cells.

It would be useful to clarify whether the patch addresses:
- only the "multiple selection" error, or
- also the inconsistency between filtered and manually hidden rows.
Comment 18 Commit Notification 2026-04-14 15:32:51 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/9280e2a62b1ab469e22848629301b7fdf4d744bd

tdf#48274 - Enable fill operations including filtered rows

It will be available in 26.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.