tdf#48274 - Enable fill operations including filtered rows

When performing a fill operation, only visible cells are affected
skipping filtered rows (done in ScTable::FillSeries).

Change-Id: Ie05afa31aebce2397a9aea2837dd0929793570bf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/203334
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 1a9ed757489725d106c28c902c24fc827806c902)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/203547
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>